k8s/02-catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: retail-app
  labels:
    app: catalog
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: catalog
