k8s/04-orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: retail-app
  labels:
    app: orders
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: orders
