k8s/06-carts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carts
  namespace: retail-app
  labels:
    app: carts
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: carts
