k8s/09-checkout-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkout
  namespace: retail-app
  labels:
    app: checkout
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: checkout
