k8s/11-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: retail-app
  labels:
    app: ui
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: ui
