k8s/13-assets-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assets
  namespace: retail-app
  labels:
    app: assets
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: assets
